--- a/docker-compose-development-template.yml
+++ b/docker-compose-development-template.yml
@@ -53,6 +53,16 @@ services:
     <<: *backend
     command: /start_beat.sh
 
+  # Esta aberto na rede para que os pipelines possam conectar neste servico.
+  rabbit:
+    image: rabbitmq:3-management
+    environment:
+      RABBITMQ_DEFAULT_USER: tno
+      RABBITMQ_DEFAULT_PASS: adminadmin
+      RABBITMQ_DEFAULT_VHOST: tno_vhost
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq/
+
   # Frontend React
   frontend:
     image: node:18.12.1
@@ -108,3 +118,6 @@ services:
     depends_on:
       - backend
       - frontend
+
+volumes:
+  rabbitmq-data:
