--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,9 +3,11 @@ APScheduler==3.9.1.post1
 asgiref==3.5.2
 astropy==5.1.1
 astroquery==0.4.6
+attrs==23.1.0
 beautifulsoup4==4.12.1
 billiard==3.6.4.0
 cached-property==1.5.2
+Cartopy==0.22.0
 celery==5.2.7
 certifi==2022.9.24
 cffi==1.15.1
@@ -14,6 +16,7 @@ click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+cligj==0.7.2
 contourpy==1.0.6
 cron-descriptor==1.4.0
 cryptography==40.0.1
@@ -29,6 +32,7 @@ django-timezone-field==5.0
 django-url-filter==0.3.15
 djangorestframework==3.14.0
 enum-compat==0.0.3
+Fiona==1.9.4.post1
 flower==1.2.0
 fonttools==4.38.0
 greenlet==2.0.1
@@ -46,6 +50,7 @@ lxml==4.9.1
 matplotlib==3.6.2
 more-itertools==9.1.0
 numpy==1.23.4
+OWSLib==0.29.2
 packaging==21.3
 pandas==1.5.1
 Pillow==9.3.0
@@ -55,7 +60,10 @@ prompt-toolkit==3.0.38
 psycopg2-binary==2.9.5
 pycparser==2.21
 pyerfa==2.0.0.1
+pykdtree==1.3.9
 pyparsing==3.0.9
+pyproj==3.6.1
+pyshp==2.3.1
 python-crontab==2.7.1
 python-dateutil==2.8.2
 pytz==2022.6
@@ -65,13 +73,16 @@ PyYAML==6.0
 requests==2.28.1
 scipy==1.9.3
 SecretStorage==3.3.3
+shapely==2.0.1
 six==1.16.0
+sora-astro==0.3
 soupsieve==2.4
 spiceypy==5.1.2
 SQLAlchemy==1.4.44
 sqlparse==0.4.3
 tenacity==8.2.2
 tornado==6.3.2
+tqdm==4.66.1
 tzdata==2022.6
 tzlocal==4.2
 urllib3==1.26.12
