--- a/nginx-proxy-development.conf
+++ b/nginx-proxy-development.conf
@@ -6,9 +6,9 @@ upstream tnofrontend {
     server frontend:3000;
 }
 
-upstream tnosora{
-    server sora:8000;
-}
+# upstream tnosora{
+#     server sora:8000;
+# }
 
 server {
     listen 8080;
@@ -78,19 +78,29 @@ server {
         autoindex off;
     }
 
-    # Serviço SORA para geracao de mapas de predicao.
-    location /sora {
-        rewrite /sora/(.*) /$1 break;
-        proxy_pass $scheme://tnosora;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Real-IP  $remote_addr;
-        proxy_set_header Host $host;       
+    # # Serviço SORA para geracao de mapas de predicao.
+    # location /sora {
+    #     rewrite /sora/(.*) /$1 break;
+    #     proxy_pass $scheme://tnosora;
+    #     proxy_set_header X-Forwarded-For $remote_addr;
+    #     proxy_set_header X-Real-IP  $remote_addr;
+    #     proxy_set_header Host $host;       
 
-        # live reload
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_cache_bypass $http_upgrade;
+    #     # live reload
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection 'upgrade';
+    #     proxy_cache_bypass $http_upgrade;
+    # }
+
+    # Celery Flower
+    location /flower {
+        proxy_pass http://celery_flower:5555;
     }
 
+    # Rabbitmq Management
+    location /rabbitmq/ {
+        proxy_pass http://rabbit:15672/;
+        rewrite ^/rabbitmq/(.*)$ /$1 break;
+    }
 }
