--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.111",
     "@mui/material": "^5.10.17",
-    "@mui/x-date-pickers": "^6.0.0",
+    "@mui/x-data-grid": "^6.16.2",
+    "@mui/x-date-pickers": "^6.16.2",
     "axios": "1.2.0",
     "clsx": "^1.0.4",
     "d3": "7.6.1",
@@ -35,7 +36,7 @@
     "history": "5.3.0",
     "i": "^0.3.6",
     "lodash": "4.17.21",
-    "moment": "2.29.4",
+    "moment": "^2.29.4",
     "nookies": "^2.5.2",
     "npm": "9.1.2",
     "plotly.js": "2.16.3",
