--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,14 +40,14 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME  }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    # -
-    #   name: Build and push
-    #   uses: docker/build-push-action@v5
-    #   with:
-    #     context: ./backend
-    #     push: ${{ github.event_name != 'pull_request' }}
-    #     tags: ${{ steps.meta.outputs.tags }}
-    #     labels: ${{ steps.meta.outputs.labels }}
+    -
+      name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: ./backend
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
 
   build_frontend:
 
