--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
           type=sha,format=short,prefix=backend_
         flavor: |
           latest=auto
-          prefix=backend_
+          prefix=backend_,onlatest=true
     -
       name: Set up QEMU
       uses: docker/setup-qemu-action@v3
@@ -72,7 +72,7 @@ jobs:
           type=sha,format=short,prefix=frontend_
         flavor: |
           latest=auto
-          prefix=frontend_          
+          prefix=frontend_,onlatest=true          
     -
       name: Set up QEMU
       uses: docker/setup-qemu-action@v3
@@ -115,7 +115,7 @@ jobs:
           type=sha,format=short,prefix=pipelines_
         flavor: |
           latest=auto
-          prefix=pipelines_
+          prefix=pipelines_,onlatest=true
     -
       name: Set up QEMU
       uses: docker/setup-qemu-action@v3
