--- a/pipelines/docker-compose.template.yml
+++ b/pipelines/docker-compose.template.yml
@@ -8,7 +8,7 @@ services:
     command: /app/daemon.sh
     network_mode: "host"
     volumes:
-      - _BASEDIR/.ssh/:/home/apptno/.ssh
+      - _HOME/.ssh/:/home/apptno/.ssh
       - _BASEDIR/outputs/runinfo/:/app/runinfo
       - _BASEDIR/:$BASEDIR
     environment:
