783 docker slim images (#784)
* Change pipeline image for debian:buster-slim 2.09G -> 2.06

* Change backend image for python:3.10-slim 655M -> 450M #783

* Anaconda has been replaced by miniconda in the image pipeline reducing the size from 2GB o 776MB #783

* cleaning

--- a/docker-compose-development-template.yml
+++ b/docker-compose-development-template.yml
@@ -110,28 +110,14 @@ services:
     environment:
       # Acesso ao DB de Catalogo e Administrativo, caso localhost não funcione utilizar o host.docker.internal.
       # Usando Localhost
-      # - DB_URI=postgresql+psycopg2://untrustedprod:untrusted@localhost:3307/prod_gavo
-      # - DB_URI_ADMIN=postgresql+psycopg2://tnouseradmindev:TnoDev405060@localhost:3307/tnodbdev
+      - DB_URI=postgresql+psycopg2://untrustedprod:untrusted@localhost:3307/prod_gavo
+      - DB_URI_ADMIN=postgresql+psycopg2://tnouseradmindev:TnoDev405060@localhost:3307/tnodbdev
       # Usando host.docker.internal
-      - DB_URI=postgresql+psycopg2://untrustedprod:untrusted@host.docker.internal:3307/prod_gavo
-      - DB_URI_ADMIN=postgresql+psycopg2://postgres:postgres@host.docker.internal:5432/postgres
+      # - DB_URI=postgresql+psycopg2://untrustedprod:untrusted@host.docker.internal:3307/prod_gavo
+      # - DB_URI_ADMIN=postgresql+psycopg2://postgres:postgres@host.docker.internal:5432/postgres
       - USER=apptno
       - PARSL_ENV=local # PARSL_ENV define onde será o processamento: local ou linea (Slurm)
-      - PREFIX_ENV=local
       - PREDICT_OUTPUTS=/app/outputs/predict_occultation
-
-  # sora:
-  #   image: mozaru/carto-sora
-  #   user: "1000:1000"
-  #   environment:
-  #     INPUT_PATH: "/media/input"
-  #     OUTPUT_PATH: "/media/output"
-  #     CACHE_PATH: "/media/output"
-  #     PORT: 8000
-  #   volumes:
-  #     - ./archive/sora/input:/media/input
-  #     - ./archive/sora/output:/media/output
-  #   command: python3.7 /opt/server/main.py
 
 volumes:
   rabbitmq-data:
