--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,7 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 cligj==0.7.2
+colorlog==6.8.2
 contourpy==1.0.6
 cron-descriptor==1.4.0
 cryptography==41.0.4
