All information available in the asteroid table was added to the prediction pipeline. #807

--- a/pipelines/environment.py3.yml
+++ b/pipelines/environment.py3.yml
@@ -38,6 +38,7 @@ dependencies:
       - click-plugins==1.1.1
       - click-repl==0.3.0
       - cryptography==41.0.7
+      - colorlog==6.8.2
       - dill==0.3.7
       - globus-sdk==3.34.0
       - greenlet==3.0.3
