--- a/pipelines/environment.py3.yml
+++ b/pipelines/environment.py3.yml
@@ -78,6 +78,7 @@ dependencies:
       - spiceypy==5.0.1
       - sqlalchemy==1.4.32
       - tblib==3.0.0
+      - tqdm==4.66.1
       - typeguard==2.13.3
       - typing-extensions==4.9.0
       - tzdata==2023.4
