--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/list": "5.11.3",
     "@fullcalendar/react": "5.11.3",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.53",
     "@material-ui/pickers": "^4.0.0-alpha.7",
     "@material-ui/styles": "^4.3.3",
@@ -26,7 +27,7 @@
     "@mui/x-data-grid": "^6.16.2",
     "@mui/x-date-pickers": "^6.16.2",
     "aladin-lite": "^3.2.0",
-    "axios": "1.2.0",
+    "axios": "^1.6.7",
     "clsx": "^1.0.4",
     "d3": "7.6.1",
     "date-fns": "^2.0.0-beta.5",
@@ -39,13 +40,14 @@
     "moment": "^2.29.4",
     "nookies": "^2.5.2",
     "npm": "9.1.2",
-    "plotly.js": "2.16.3",
+    "plotly.js": "^2.28.0",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-date-range": "^1.0.3",
     "react-dom": "^18.2.0",
     "react-images": "1.2.0-beta.7",
     "react-lazyload": "3.2.0",
+    "react-markdown": "^9.0.1",
     "react-plotly.js": "^2.3.0",
     "react-query": "^3.39.2",
     "react-router-dom": "6.4.3",
@@ -54,6 +56,7 @@
     "react-sizeme": "3.0.2",
     "react-syntax-highlight": "^15.3.1",
     "react-youtube": "10.1.0",
+    "remark-gfm": "^4.0.0",
     "sql-formatter": "12.0.3",
     "uuid": "^9.0.1"
   },
