--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,6 +1,7 @@
 # NODE_PATH=./src
 REACT_APP_API=http://localhost/api
-REACT_APP_SORA=http://localhost/sora
+
+# REACT_APP_SORA=http://localhost/sora
 # REACT_APP_API=http://tno-dev.linea.org.br/api
 # REACT_APP_API=http://tno-dev.linea.org.br/sora
 # REACT_APP_INST_LOGIN=http://gidlabdemo.linea.org.br/Shibboleth.sso/Login
