--- a/nginx-proxy-production.conf
+++ b/nginx-proxy-production.conf
@@ -32,10 +32,16 @@ server {
     uwsgi_read_timeout 180s;
     uwsgi_send_timeout 180s;
 
-    # Frontend Builded
+    # Frontend Public Page Builded
     location / {
-        alias /var/www/frontend/;
+        alias /var/www/public_page/;
         try_files $uri $uri/ /index.html;
+        autoindex off;
+    }
+    # Frontend Dashboard Builded
+    location /dashboard/ {
+        alias /var/www/dashboard/;
+        try_files $uri $uri/ =404;
         autoindex off;
     }
 
@@ -90,17 +96,17 @@ server {
     #     proxy_buffering off;
     # }
 
-    location /sora {
-        rewrite /sora/(.*) /$1 break;
-        proxy_pass $scheme://tnosora;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Real-IP  $remote_addr;
-        proxy_set_header Host $host;
+    # location /sora {
+    #     rewrite /sora/(.*) /$1 break;
+    #     proxy_pass $scheme://tnosora;
+    #     proxy_set_header X-Forwarded-For $remote_addr;
+    #     proxy_set_header X-Real-IP  $remote_addr;
+    #     proxy_set_header Host $host;
 
-        # live reload
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_cache_bypass $http_upgrade;
-    }
+    #     # live reload
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection 'upgrade';
+    #     proxy_cache_bypass $http_upgrade;
+    # }
 }
