Correcao de formatacao de codigos

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,9 +19,9 @@ repos:
     hooks:
     -   id: black
         exclude: ^(migrations/|pipelines/)
--   repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-    -   id: isort
-        name: isort (python)
-        exclude: ^(migrations/|pipelines/|backend/old_apps/)
+# -   repo: https://github.com/pycqa/isort
+#     rev: 5.12.0
+#     hooks:
+#     -   id: isort
+#         name: isort (python)
+#         exclude: ^(migrations/|pipelines/|backend/old_apps/)
