--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,13 +15,13 @@ repos:
       - id: check-docstring-first
       - id: detect-private-key
 -   repo: https://github.com/psf/black
-    rev: 22.10.0
+    rev: 24.1.1
     hooks:
     -   id: black
         exclude: ^(migrations/|pipelines/)
-# -   repo: https://github.com/pycqa/isort
-#     rev: 5.12.0
-#     hooks:
-#     -   id: isort
-#         name: isort (python)
-#         exclude: ^(migrations/|pipelines/|backend/old_apps/)
+-   repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+    -   id: isort
+        name: isort (python)
+        exclude: ^(migrations/|pipelines/|backend/old_apps/)
