--- a/nginx-proxy-development.conf
+++ b/nginx-proxy-development.conf
@@ -61,7 +61,8 @@ server {
     #     try_files $uri $uri/ =404;
     #     autoindex off;
     # }
-    # Frontend Dashboard Builded
+
+    # Alias para / quando chamado pelo dashboard
     location /public_home/ {
         alias /var/www/public_page/;
         try_files $uri $uri/ =404;
