Fixed bug in predict pipeline permission denied dates.txt

--- a/nginx-proxy-production.conf
+++ b/nginx-proxy-production.conf
@@ -45,6 +45,13 @@ server {
         autoindex off;
     }
 
+    # Alias para / quando chamado pelo dashboard
+    location /public_home/ {
+        alias /var/www/public_page/;
+        try_files $uri $uri/ =404;
+        autoindex off;
+    }
+
     location /api {
         include uwsgi_params;
         uwsgi_pass tnoapi;
