--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -75,6 +75,7 @@
                 "mrmlnc.vscode-duplicate",
                 "visualstudioexptteam.vscodeintellicode",
                 "visualstudioexptteam.intellicode-api-usage-examples",
+                "eamodio.gitlens",
                 // python
                 "ms-python.python",
                 "ms-python.vscode-pylance",
