--- a/predict_occultation/Dockerfile
+++ b/predict_occultation/Dockerfile
@@ -123,8 +123,8 @@ RUN groupadd --gid ${USERGID} ${USERNAME} \
 ENV PIPELINE_ROOT=${APP_HOME}/src
 ENV PIPELINE_PREDIC_OCC=${PIPELINE_ROOT}/predict_occultation
 ENV PIPELINE_PATH=${PIPELINE_PREDIC_OCC}/pipeline
-ENV WORKFLOW_PATH=${PIPELINE_ROOT}
-ENV EXECUTION_PATH=${PIPELINE_ROOT}
+# ENV WORKFLOW_PATH=${PIPELINE_ROOT}
+# ENV EXECUTION_PATH=${PIPELINE_ROOT}
 
 COPY --chown=${USERNAME}:ton --chmod=775 src /app/src
 COPY --chown=${USERNAME}:ton --chmod=775 entrypoint.sh ${APP_HOME}
