Fixed reload in builded pages

--- a/nginx-proxy-production.conf
+++ b/nginx-proxy-production.conf
@@ -32,25 +32,28 @@ server {
     uwsgi_read_timeout 180s;
     uwsgi_send_timeout 180s;
 
+    root /var/www/html/;
+    index index.html;
+
     # Frontend Public Page Builded
     location / {
-        alias /var/www/public_page/;
-        try_files $uri $uri/ /index.html;
+        root /var/www/html;
+        try_files $uri $uri/ /index.html$is_args$args;
         autoindex off;
     }
     # Frontend Dashboard Builded
     location /dashboard/ {
-        alias /var/www/dashboard/;
-        try_files $uri $uri/ =404;
-        autoindex off;
+        if (!-e $request_filename){
+            rewrite ^(.*)$ /dashboard/index.html break;
+        }
     }
 
-    # Alias para / quando chamado pelo dashboard
-    location /public_home/ {
-        alias /var/www/public_page/;
-        try_files $uri $uri/ =404;
-        autoindex off;
-    }
+    # # Alias para / quando chamado pelo dashboard
+    # location /public_home/ {
+    #     alias /var/www/public_page/;
+    #     try_files $uri $uri/ =404;
+    #     autoindex off;
+    # }
 
     location /api {
         include uwsgi_params;
