--- a/nginx-proxy-development.conf
+++ b/nginx-proxy-development.conf
@@ -32,42 +32,72 @@ server {
     uwsgi_read_timeout 180s;
     uwsgi_send_timeout 180s;
 
-    # Frontend
-    # Proxy pass to frontend development server with live relead
-    # Based in this article: https://nathanfriend.io/2018/05/14/live-reloading-an-angular-2-app-behind-nginx.html
-    location / {
-        proxy_pass $scheme://tnofrontend;
-
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Real-IP  $remote_addr;
-        proxy_set_header Host $host;
-
-        # live reload
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    # # Frontend Public Page Builded
+    # # Frontend
+    # # Proxy pass to frontend development server with live relead
+    # # Based in this article: https://nathanfriend.io/2018/05/14/live-reloading-an-angular-2-app-behind-nginx.html
     # location / {
-    #     alias /var/www/public_page/;
-    #     try_files $uri $uri/ /index.html;
-    #     autoindex off;
-    # }
-    # # Frontend Dashboard Builded
-    # location /dashboard/ {
-    #     alias /var/www/dashboard/;
-    #     try_files $uri $uri/ =404;
-    #     autoindex off;
+    #     proxy_pass $scheme://tnofrontend;
+
+    #     proxy_set_header X-Forwarded-For $remote_addr;
+    #     proxy_set_header X-Real-IP  $remote_addr;
+    #     proxy_set_header Host $host;
+
+    #     # live reload
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection 'upgrade';
+    #     proxy_cache_bypass $http_upgrade;
     # }
 
-    # Alias para / quando chamado pelo dashboard
-    location /public_home/ {
-        alias /var/www/public_page/;
-        try_files $uri $uri/ =404;
+    root /var/www/html/;
+    index index.html;
+
+    # Frontend Public Page Builded
+    location / {
+        root /var/www/html;
+        try_files $uri $uri/ /index.html$is_args$args;
         autoindex off;
     }
+    # Frontend Dashboard Builded
+    location /dashboard/ {
+        if (!-e $request_filename){
+            rewrite ^(.*)$ /dashboard/index.html break;
+        }
+    }
+
+    # Alias para / quando chamado pelo dashboard
+    location = /public_home {
+        return 301 /;
+    }
+
+
+    # if ($request_uri !~ "^/dashboard")
+    # {
+    #     rewrite ^([^.]*[^/])$ $1/ permanent;
+    #     rewrite ^([^.]*)$ /dashboard/index.php;
+    # }
+
+    # location /dashboard {
+    #     if (!-e $request_filename){
+    #         rewrite ^(.*)$ /dashboard/index.html break;
+    #     }
+    # }
+    # location /dashboard/ {
+    #     if (!-e $request_filename){
+    #         rewrite ^(.*)$ /dashboard/index.html break;
+    #     }
+    # }
+
+    # # Frontend Dashboard Builded
+    # location /dashboard {
+    #     root /var/www/html/dashboard;
+    #     try_files $uri $uri/ /index.html$is_args$args;
+    #     autoindex off;
+    #     # if (!-e $request_filename){
+    #     #     rewrite ^(.*)$ /index.html$is_args$args break;
+    #     # }
+    # }
+
 
     location /api {
         include uwsgi_params;
