Closed #847 Fixed reload builded pages

--- a/nginx-proxy-development.conf
+++ b/nginx-proxy-development.conf
@@ -32,38 +32,38 @@ server {
     uwsgi_read_timeout 180s;
     uwsgi_send_timeout 180s;
 
-    # # Frontend
-    # # Proxy pass to frontend development server with live relead
-    # # Based in this article: https://nathanfriend.io/2018/05/14/live-reloading-an-angular-2-app-behind-nginx.html
-    # location / {
-    #     proxy_pass $scheme://tnofrontend;
-
-    #     proxy_set_header X-Forwarded-For $remote_addr;
-    #     proxy_set_header X-Real-IP  $remote_addr;
-    #     proxy_set_header Host $host;
-
-    #     # live reload
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection 'upgrade';
-    #     proxy_cache_bypass $http_upgrade;
-    # }
-
-    root /var/www/html/;
-    index index.html;
-
-    # Frontend Public Page Builded
+    # Frontend
+    # Proxy pass to frontend development server with live relead
+    # Based in this article: https://nathanfriend.io/2018/05/14/live-reloading-an-angular-2-app-behind-nginx.html
     location / {
-        root /var/www/html;
-        try_files $uri $uri/ /index.html$is_args$args;
-        autoindex off;
+        proxy_pass $scheme://tnofrontend;
+
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Real-IP  $remote_addr;
+        proxy_set_header Host $host;
+
+        # live reload
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_cache_bypass $http_upgrade;
     }
-    # Frontend Dashboard Builded
-    location /dashboard/ {
-        if (!-e $request_filename){
-            rewrite ^(.*)$ /dashboard/index.html break;
-        }
-    }
+
+    # root /var/www/html/;
+    # index index.html;
+
+    # # Frontend Public Page Builded
+    # location / {
+    #     root /var/www/html;
+    #     try_files $uri $uri/ /index.html$is_args$args;
+    #     autoindex off;
+    # }
+    # # Frontend Dashboard Builded
+    # location /dashboard/ {
+    #     if (!-e $request_filename){
+    #         rewrite ^(.*)$ /dashboard/index.html break;
+    #     }
+    # }
 
     # Alias para / quando chamado pelo dashboard
     location = /public_home {
